--- a/src/themes/components/checkbox/_checkbox-theme.scss
+++ b/src/themes/components/checkbox/_checkbox-theme.scss
@@ -1,78 +1,125 @@
-@include scale-in-center;
 
-%igx-cbx-lbl-display {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    min-height: $checkbox-height;
-    line-height: $checkbox-height;
-    font-size: $input-font-size;
-    font-weight: $input-font-weight;
-    color: $input-color;
-    padding-left: $checkbox-label-padding;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    overflow: hidden;
 
-    &::after {
+@function igx-checkbox-theme(
+    $input-color:null,
+    $disabled-color:null,
+    $tick-color: null,
+    $not-checked-border-color: null,
+    $checked-border-color: null,
+    $fill-color: null
+){
+    @return (
+        input-color:$input-color,
+        disabled-color:$disabled-color,
+        tick-color:$tick-color,
+        not-checked-border-color:$not-checked-border-color,
+        checked-border-color:$checked-border-color,
+        fill-color:$fill-color
+    );
+}
+
+@mixin igx-checkbox($theme, $palette: $default-palette){
+    $default-theme: igx-checkbox-theme(
+            $input-color:igx-color($palette, grays, 900),
+            $disabled-color:igx-color($palette, grays, 500),
+            $tick-color: $white,
+            $not-checked-border-color: igx-color($palette, grays, 600),
+            $checked-border-color: igx-color($palette, accent, 500),
+            $fill-color: igx-color($palette, accent, 500)
+    );
+
+    $this: extend($default-theme, $theme);
+
+    // Checkboxes
+    $checkbox-width: 20px !default;
+    $checkbox-height: $checkbox-width !default;
+    $checkbox-label-padding: em(24px, 16px) !default;
+    $checkbox-radius: 2px !default;
+    $checkbox-border-style: 2px solid !default;
+    $checkbox-tick-width: 20px !default;
+    $checkbox-tick-height: 20px !default;
+    $checkbox-tick-weight: 3px !default;
+    $checkbox-tick-color: $white !default;
+    $checkbox-tick-padding: 3px 2px 2px !default;
+
+    @include scale-in-center;
+
+    %igx-cbx-lbl-display {
+        display: inline-block;
+        position: relative;
+        cursor: pointer;
+        min-height: $checkbox-height;
+        line-height: $checkbox-height;
+        font-size: $input-font-size;
+        font-weight: $input-font-weight;
+        color: map-get($this, input-color);
+        padding-left: $checkbox-label-padding;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
+        overflow: hidden;
+
+        &::after {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            border-radius: $checkbox-radius;
+        }
+    }
+
+    %igx-cbx-lbl-box {
+        width: $checkbox-width;
+        height: $checkbox-height;
+    }
+
+    %igx-cbx-lbl-tick {
         position: absolute;
-        content: '';
         top: 0;
         left: 0;
-        border-radius: $checkbox-radius;
+        width: $checkbox-tick-width;
+        height: $checkbox-tick-height;
+        padding: $checkbox-tick-padding;
+        stroke: none;
+        stroke-linecap: round;
+        stroke-width: $checkbox-tick-weight;
+        fill: none;
+        z-index: 1;
+    }
+
+    %igx-cbx-lbl-checked-tick {
+        @include animation('scale-in-center' .3s $ease-out-back both);
+        stroke: map-get($this, tick-color);
+    }
+
+    %igx-cbx-lbl-notchecked-after {
+        @extend %igx-cbx-lbl-box;
+        border: $checkbox-border-style map-get($this, not-checked-border-color);
+    }
+
+    %igx-cbx-lbl-checked-after {
+        @extend %igx-cbx-lbl-box;
+        background-color: map-get($this, fill-color);
+        border: $checkbox-border-style map-get($this, checked-border-color);
+    }
+
+    %igx-cbx-lbl-disabled {
+        color: map-get($this, disabled-color);
+        pointer-events: none;
+    }
+
+    %igx-cbx-lbl-checked--disabled-after {
+        background-color: map-get($this, disabled-color);
+        border-color: map-get($this, disabled-color);
+    }
+
+    %igx-cbx-lbl-notchecked--disabled-after {
+        border-color: map-get($this, disabled-color);
+    }
+
+    %igx-cbx-lbl--indeterminate-after {
+        background-color: map-get($this, fill-color);
+        border: $checkbox-border-style map-get($this, fill-color);
     }
 }
 
-%igx-cbx-lbl-box {
-    width: $checkbox-width;
-    height: $checkbox-height;
-}
 
-%igx-cbx-lbl-tick {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: $checkbox-tick-width;
-    height: $checkbox-tick-height;
-    padding: $checkbox-tick-padding;
-    stroke: none;
-    stroke-linecap: round;
-    stroke-width: $checkbox-tick-weight;
-    fill: none;
-    z-index: 1;
-}
-
-%igx-cbx-lbl-checked-tick {
-    @include animation('scale-in-center' .3s $ease-out-back both);
-    stroke: $checkbox-tick-color;
-}
-
-%igx-cbx-lbl-notchecked-after {
-    @extend %igx-cbx-lbl-box;
-    border: $checkbox-border-style $radio-empty-color;
-}
-
-%igx-cbx-lbl-checked-after {
-    @extend %igx-cbx-lbl-box;
-    background-color: $radio-fill-color;
-    border: $checkbox-border-style $radio-fill-color;
-}
-
-%igx-cbx-lbl-disabled {
-    color: $input-disabled-color;
-    pointer-events: none;
-}
-
-%igx-cbx-lbl-checked--disabled-after {
-    background-color: $input-disabled-solid-color;
-    border-color: $input-disabled-solid-color;
-}
-
-%igx-cbx-lbl-notchecked--disabled-after {
-    border-color: $input-disabled-solid-color;
-}
-
-%igx-cbx-lbl--indeterminate-after {
-    background-color: $radio-fill-color;
-    border: $checkbox-border-style $radio-fill-color;
-}
