--- a/src/themes/components/date-picker/_date-picker-theme.scss
+++ b/src/themes/components/date-picker/_date-picker-theme.scss
@@ -1,13 +1,28 @@
-%date-picker-display {
-    max-width: 340px;
-    min-width: 320px;
-    padding: 0;
+$components: register-component($components, 'igx-date-picker');
+
+@function igx-date-picker-theme(){
+    @return ();
 }
 
-%date-picker-content {
-    width: 100%;
-    padding: 0;
-    color: inherit;
-    font-size: initial;
-    line-height: initial;
+
+@mixin igx-date-picker($theme, $palette: $default-palette){
+
+    $default-theme: igx-date-picker-theme();
+
+    $this: extend($default-theme, $theme);
+
+    %date-picker-display {
+        max-width: 340px;
+        min-width: 320px;
+        padding: 0;
+    }
+
+    %date-picker-content {
+        width: 100%;
+        padding: 0;
+        color: inherit;
+        font-size: initial;
+        line-height: initial;
+    }
 }
+
