Commit register components function

--- a/src/themes/base/utilities/_functions.scss
+++ b/src/themes/base/utilities/_functions.scss
@@ -257,3 +257,13 @@
         )
     );
 }
+
+@function register-component($components, $component) {
+
+
+        @if not(index($components, $component)) {
+            @return join($components, $component);
+        }
+
+    @return $components;
+}
