--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -31,6 +31,7 @@
 // 29. Icon
 // 1. Colors //
 // Base colors
+$components: ();
 $rich-black: #0b3c49 !default;
 $byzantium: #731963 !default;
 $vivid-cerise: #e41c77 !default;
